--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 # Core dependencies
-tensorflow
+tensorflow==2.15.0
 numpy==1.26.4
 pillow>=9.0.0
 matplotlib>=3.5.0
@@ -7,7 +7,7 @@ matplotlib>=3.5.0
 # Web frameworks
 fastapi>=0.95.0
 uvicorn[standard]>=0.21.0
-streamlit==1.21.0
+streamlit>=1.35.0  # Обновлена версия
 
 # Image processing and GIS
 rasterio>=1.3.0
