--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,13 @@
 # Core dependencies
-tensorflow==2.15.0
-numpy==1.26.4
+tensorflow==2.18.0  # Изменено с 2.15.0
+numpy>=1.26.0,<2.0  # Важно для совместимости с TF 2.18
 pillow>=9.0.0
 matplotlib>=3.5.0
 
 # Web frameworks
 fastapi>=0.95.0
 uvicorn[standard]>=0.21.0
-streamlit>=1.35.0  # Обновлена версия
+streamlit>=1.35.0
 
 # Image processing and GIS
 rasterio>=1.3.0
