--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,13 @@
 # Core dependencies
-tensorflow
-
+tensorflow>=2.10.0
+numpy==1.26.4
 pillow>=9.0.0
 matplotlib>=3.5.0
 
 # Web frameworks
 fastapi>=0.95.0
 uvicorn[standard]>=0.21.0
-streamlit>=1.35.0
+streamlit==1.21.0
 
 # Image processing and GIS
 rasterio>=1.3.0
